--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,6 @@ a {
 
 #breadcrumbs {
   font-size:22px;
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-family: "Helvetica Neue";
   font-weight:400;
 }
